service-config/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: config
spec:
  hosts:
    - "config.sm.apps.ocp.example.com"
  gateways:
    - config
  http:
    - rewrite:
        authority: service-config.servicemesh-with-serverless.svc.cluster.local
      route:
        - destination:
            host: service-config.servicemesh-with-serverless.svc.cluster.local
            port:
              number: 80
